# Snake-AI

./: .gitignore  COMPARISON.md  README.md
python/: flake.nix  ga.py  network.py  snake_env.py  train.py  visualize.py  watch.py
rust/: Cargo.toml  flake.nix
rust/src/: ga.rs  gpu.rs  main.rs  network.rs  shader.wgsl  snake_env.rs  visualize.rs
