[package]
name    = "snake-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
rand       = "0.8"
rand_distr = "0.4"
rayon      = "1"
macroquad  = "0.4"
clap       = { version = "4", features = ["derive"] }
wgpu       = "22"
bytemuck   = "1"
pollster   = "0.3"

[profile.release]
opt-level = 3
lto       = true
